k8s/base/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-api
  template:
    metadata:
      labels:
        app: catalog-api
    spec:
      containers:
        - name: catalog-api
          image: hashicorp/http-echo:latest
          args:
            - "-text={\"service\":\"catalog\",\"status\":\"healthy\",\"items\":[\"Keyboard\",\"Mouse\",\"Monitor\"]}"
          ports:
            - containerPort: 5678
