k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-ui
  labels:
    app: store-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-ui
  template:
    metadata:
      labels:
        app: store-ui
    spec:
      containers:
        - name: store-ui
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: html-volume
          configMap:
            name: storefront-ui-content
