k8s/base/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-api-svc
spec:
  selector:
    app: catalog-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
