k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: store-ui
  name: store-ui-svc
  namespace: store-dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: store-ui
status:
  loadBalancer: {}
